force-app/main/objects/Lease_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Lease Contracts</relationshipLabel>
        <relationshipName>Lease_Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <description>This field represents the number of days in the contract.</description>
        <formula>End_Date__c - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field represents the number of days in the contract.</inlineHelpText>
        <label>Contract Term(Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_In_Contract__c</fullName>
        <description>This field returns the number of days remaining in the Lease Contract.</description>
        <formula>IF(End_Date__c - TODAY()&gt;0,End_Date__c - TODAY() ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field returns the number of days remaining in the Lease Contract.</inlineHelpText>
        <label>Days Remaining In Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This field refers to the expiration date of the Contract.</description>
        <inlineHelpText>This field refers to the expiration date of the Contract.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Flat</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Please enter a vacant flat within the selected building.</errorMessage>
            <filterItems>
                <field>Flat__c.Building__c</field>
                <operation>equals</operation>
                <valueField>$Source.Building__c</valueField>
            </filterItems>
            <filterItems>
                <field>Flat__c.Status__c</field>
                <operation>equals</operation>
                <value>Vacant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Flat__c</referenceTo>
        <relationshipLabel>Lease Contracts</relationshipLabel>
        <relationshipName>Lease_Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>Revenue generated by the corresponding tenant.</description>
        <inlineHelpText>Revenue generated by the corresponding tenant.</inlineHelpText>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>This field refers to the starting date of the Contract.</description>
        <inlineHelpText>This field refers to the starting date of the Contract.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved by Coordinator&apos;s Manager</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Rejected by Coordinator&apos;s Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenant_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tenant Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Contacts with Record type &quot;Tenant&quot; can be used.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Tenant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lease Contracts</relationshipLabel>
        <relationshipName>Lease_Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Lease Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Flat__c</columns>
        <columns>Tenant_Contact__c</columns>
        <columns>Days_Remaining_In_Contract__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Lease Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_Greater_Than_Start_Date</fullName>
        <active>false</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date of the Lease Contract must be after the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Flat_must_be_Vacant</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Flat__r.Status__c , &quot;Occupied&quot;)</errorConditionFormula>
        <errorDisplayField>Flat__c</errorDisplayField>
        <errorMessage>Please choose a Vacant Flat for the Contract</errorMessage>
    </validationRules>
</CustomObject>